The testcase is working now